# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\Api\v1\Auth\AuthController;
 use App\Http\Controllers\Api\v1\Sceneries\SceneriesController;
 
 /*
@@ -18,8 +19,13 @@ use App\Http\Controllers\Api\v1\Sceneries\SceneriesController;
 Route::group([
     'prefix' => 'v1',
 ], function () {
+    Route::prefix('auth')->group(function () {
+        Route::post('register', [AuthController::class, 'register']);
+        Route::post('login', [AuthController::class, 'login']);
+    });
+
     Route::prefix('sceneries')->group(function () {
-        Route::prefix('publics')->group(function (){
+        Route::prefix('publics')->group(function () {
             Route::get('all', [SceneriesController::class, 'getPublicsAll']);
         });
     });
